Fix - CSS: jQuery UI styling with `cell-border` class and scrolling enabled could have the columns looking like they are slightly misaligned (1px) due to an incorrect border assignment
- Need to have the border modification in the header match how the body
  works - i.e. on the left do the collpase

--- a/css/dataTables.jqueryui.scss
+++ b/css/dataTables.jqueryui.scss
@@ -25,10 +25,10 @@ table.dataTable {
 	thead,
 	tfoot {
 		th.ui-state-default {
-			border-right-width: 0;
+			border-left-width: 0;
 
-			&:last-child {
-				border-right-width: 1px;
+			&:first-child {
+				border-left-width: 1px;
 			}
 		}
 	}
